--- a/web/top.html
+++ b/web/top.html
@@ -6,7 +6,7 @@
 
 <body bgcolor=#dddddd>
 
-<a href=index.php>扫描信息</a> 
+<a href=index.php>扫描信息</a> <a href=http://whoisscanme.ustc.edu.cn:4000>威胁态势</a> 
 <a href=https://github.com/bg6cq/whoisscanme>列表介绍</a> 
 <?php 
 echo "您的IP地址:";
